# Agentic-Research-Assistant

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT_GUIDE.md  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  keepalive.yml  live-smoke.yml
agentic-research-assistant/: Makefile  README.md  pyproject.toml  requirements.txt
agentic-research-assistant/examples/sample_papers/: 01_scirag.txt  03_context_retriever.txt
agentic-research-assistant/src/research_assistant/: cli.py  factory.py  report.py
agentic-research-assistant/src/research_assistant/agents/: __init__.py  summarizer.py
agentic-research-assistant/src/research_assistant/graph/: __init__.py
agentic-research-assistant/src/research_assistant/rag/: embeddings.py
agentic-research-assistant/tests/: conftest.py  test_context.py  test_embeddings.py  test_llm.py  test_pipeline_dry_run.py
data/index_demo/: chunks.jsonl  index.faiss  meta.json
examples/sample_papers/: 02_reflectgraph.txt
frontend/: .env.example  index.html  package.json
frontend/src/: App.jsx
src/agentic_research_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/research_assistant/: __init__.py  __main__.py  cli.py  config.py  context.py  factory.py  llm.py  logging_utils.py  rate_limit.py  schemas.py  webapp.py
src/research_assistant/agents/: evaluator.py  retriever.py
src/research_assistant/graph/: state.py  workflow.py
src/research_assistant/ingestion/: __init__.py  chunking.py  loaders.py
src/research_assistant/rag/: __init__.py  vector_store.py
tests/: test_chunking.py  test_schemas.py  test_vector_store.py  test_webapp.py
